--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <div class="bla">
         blah blah
     </div>
+    <div class="bla2">
+        blah blah2
+    </div>
+    <div class="bla3">
+        blah blah3
+    </div>
     <div class="hey">
         hey hey
     </div>
