added a div first

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="src/script.js"></script>
 </head>
 <body>
+    <div class="first">
+        hihihih
+    </div>
     <h1>
         hello
     </h1>
