--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div class="hey">
         hey hey
     </div>
+    <div class="second">
+        lalalal
+    </div>
     <script>
         hello()
     </script>
